@@ -1,23 +1,12 @@
 
-plugins {
-    id 'org.jetbrains.kotlin.jvm'
-}
-
-ext.gradleScripts = "https://raw.githubusercontent.com/hexagonkt/hexagon/$hexagonVersion/gradle"
-
+// Kotlin build configuration is taken from a build script in other repository
 apply from: "$gradleScripts/kotlin.gradle"
 apply from: "$gradleScripts/service.gradle"
 
 mainClassName = 'com.hexagonkt.todokt.backend.TodoKt'
-applicationDefaultJvmArgs = [
-    '-Xms64M', '-Xmx2G', '-XX:+UseNUMA', '-XX:+UseParallelGC', '-XX:+AggressiveOpts'
-]
-
-defaultTasks 'test'
+applicationDefaultJvmArgs = [ '-Xms64M', '-Xmx2G', '-XX:+UseNUMA', '-XX:+UseParallelGC' ]
 
 dependencies {
-    compile ("com.hexagonkt:server_jetty:$hexagonVersion")
-
     compile("com.hexagonkt:server_jetty:$hexagonVersion")
     compile("com.hexagonkt:hexagon_rest:$hexagonVersion")
     compile("ch.qos.logback:logback-classic:$logbackVersion")
@@ -25,14 +14,18 @@ dependencies {
     testCompile("com.hexagonkt:port_client:$hexagonVersion")
 }
 
-installDist {
+// Compiles the frontend module before processing resources and includes the output in the classpath
+processResources {
     dependsOn ':frontend:assemble'
     doLast {
-        println 'Hi'
+        copy {
+            from "$rootDir/frontend/build/web"
+            into "$buildDir/resources/main/public"
+        }
+        // Copy generated JS also to Idea output (required to run the project inside the IDE)
+        copy {
+            from "$rootDir/frontend/build/web"
+            into "$rootDir/backend/out/production/resources/public"
+        }
     }
-}
-
-task installFrontend(type: Copy, dependsOn: 'classes') {
-    from "$rootDir/frontend/build/web"
-    into "$buildDir/resources/main/public"
 }
